--- a/client/assets/scss/components/_headline.scss
+++ b/client/assets/scss/components/_headline.scss
@@ -1,6 +1,5 @@
 .tomo-headline {
   .tomo-readmore--is-open {
-    vertical-align: top;
     max-width: 80%;
   }
 }
