--- a/client/assets/scss/components/_table.scss
+++ b/client/assets/scss/components/_table.scss
@@ -181,3 +181,36 @@
     }
   }
 }
+
+.tomo-table--events {
+
+  tbody tr {
+    padding: 40px 20px 0;
+    margin-bottom: 0;
+
+    &:first-child {
+      border-bottom-left-radius: 0;
+      border-bottom-right-radius: 0;
+    }
+
+    &:last-child {
+      border-top-left-radius: 0;
+      border-top-right-radius: 0;
+    }
+  }
+
+  td {
+    display: block;
+    margin-bottom: 20px;
+
+    &:last-child {
+      border-bottom: 1px solid $color-text;
+      margin-bottom: 0;
+      padding-bottom: 20px;
+    }
+  }
+
+  tr:last-child td:last-child {
+    border-bottom: none;
+  }
+}
