--- a/client/assets/scss/settings/_global.scss
+++ b/client/assets/scss/settings/_global.scss
@@ -21,5 +21,6 @@ $color-primary: #34a1ff;
 $color-primary-hover: darker($color-primary);
 $color-text: #868f9b;
 $color-text-2: #2b2f36;
+$color-purple: #b875f2;
 $color-danger: #fc98a6;
 $color-success: #90e9a3;
